# medic

./: .gitignore  Cargo.toml  LICENSE.txt  deny.toml  readme.markdown
src/: entries.rs  lib.rs  main.rs
test-files/: csv_export.csv  test_db.kdbx  test_db.old.kdbx  test_db_no_keyfile.kdbx  test_key_file
tests/: integration-tests.rs
tests/test-files/: abbreviated_hibp_hashes.txt  cleartext_passwords.txt  export-of-test_db_no_keyfile.csv  high-number-aes-kdf-interations.kdbx  report-offline.txt  report.txt  report13.txt  test-output.txt  version_4_test_db.kdbx  version_4_test_db.old.kdbx
tests/test-files/v3_1/: test_db.kdbx  test_db_no_keyfile.kdbx  test_db_v3-1_no_keyfile.kdbx
tests/test-files/v4/: test_db_no_keyfile_v4.kdbx  version_4_test_db.kdbx  version_4_test_db.old.kdbx  version_4_test_db_keyfile
