[package]
name = "medic"
version = "0.3.49"
authors = ["sts10 <sschlinkert@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "json"] } 
rpassword = "7.2.0"
keepass = "0.6.1"
sha1_smol = "1.0.0"
zxcvbn = "2.2.2"
clap = { version = "4.4.2", features = ["derive"] }
csv = "1.2.2"
indicatif = "0.17.6"
