[package]
name = "medic"
version = "0.3.55"
authors = ["sts10 <sschlinkert@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/sts10/medic"
readme = "readme.markdown"
description = "Check the 'health' of passwords in a KeePass database"

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] } 
rpassword = "7.3.1"
keepass = "0.7.29"
sha1_smol = "1.0.0"
zxcvbn = "2.2.2"
clap = { version = "4.4.10", features = ["derive"] }
csv = "1.3.0"
indicatif = "0.17.7"
